<resources>
    <string name="app_name">AndroidFundamentals</string>
    <string name="hello_android">Hello Android !</string>
    <string name="remember_me">Remember Me</string>
    <string name="email_field_hint">Email field</string>
    <string name="login">login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="cars_of_the_day">Cars Of The Day</string>
    <string name="update_car">Update car</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation6">NavigationActivity6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_tabbed6">TabbedActivity6</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="error_occured">Error Occured</string>
    <string name="retry">Retry</string>
    <string name="retry_message">This is an error, please retry!!</string>
</resources>
