<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mid_dimen_margin"
        android:layout_marginTop="@dimen/mid_dimen_margin"
        android:layout_marginBottom="@dimen/mid_dimen_margin"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/mid_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/small_dimen_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:textSize="@dimen/text_size_26sp" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen_margin"
        android:layout_marginEnd="@dimen/small_dimen_margin"
        android:layout_marginBottom="20dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:textSize="26sp" />

    <CheckBox
        android:id="@+id/accept_terms_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen_margin"
        android:text="I accept T&amp;C" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_dimen_margin"
        android:layout_marginEnd="@dimen/small_dimen_margin"
        android:layout_marginTop="@dimen/big_dimen_margin_top"
        android:background="@color/blue"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/mid_text_size" />
</LinearLayout>