<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/small_dimen_margin"
        android:layout_marginEnd="20dp"
        android:gravity="start"
        android:text="@string/hello_android"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:text="Button"
        android:textColor="@color/white" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/small_dimen_margin"
        android:layout_marginTop="@dimen/small_dimen_margin"
        android:layout_marginEnd="@dimen/small_dimen_margin"
        android:background="#fff" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/small_dimen_margin"
        android:src="@drawable/ic_launcher_background" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#fff"
        android:text="@string/remember_me" />

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:hint="@string/email_field_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/silver"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/switch_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:text="Switch" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="?android:ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/small_dimen_margin"
        android:background="@color/silver">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Radio 1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Radio 2"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin=""
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:src="@drawable/ic_launcher_background" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:background="@color/colorAccent" />

        <View
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:background="@color/silver" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:background="@color/white"
            android:gravity="center"
            android:text="Hello"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_layout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:src="@drawable/ic_launcher_background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_dimen_margin"
            android:background="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>